--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.env
 dist
 dist-ssr
 *.local
 .env
-
+public
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -23,3 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+assets
