--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "@heroicons/react": "^2.1.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
