--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+     "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
