--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "jwt-decode": "^4.0.0",
-    "@heroicons/react": "^2.1.1",
+    "date-fns": "^2.30.0",
     "gsap": "^3.12.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
-     "date-fns": "^2.30.0"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
