--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
