--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
