--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
@@ -23,7 +24,9 @@
     "lucide-react": "^0.344.0",
     "moment-timezone": "^0.5.47",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
